agregada ventana de edicion de notas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,23 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+
         <provider
-            android:authorities="com.example.plainolnotes.notesprovider"
             android:name=".NotesProvider"
-            android:exported="false"/>
-        
+            android:authorities="com.example.plainolnotes.notesprovider"
+            android:exported="false" />
+
+        <activity
+            android:name=".EditorActivity"
+            android:label="Editor de Notas"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.moreno.notas.MainActivity"
+                />
+
+        </activity>
     </application>
 
 </manifest>
